# sharedserver

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  sharedserver.example.yaml
.github/workflows/: publish.yml
src/sharedserver/: __init__.py  cli.py  clipboard.py  config.py  file_manager.py  models.py  security.py  server.py  websocket.py
src/sharedserver/static/: app.css  app.js
src/sharedserver/templates/: index.html
tests/: test_cli.py  test_clipboard.py  test_config.py  test_project_language.py  test_security.py  test_server.py
